# tree-sitter-requirements

./: .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.rst  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
.github/workflows/: build.yml  deploy.yml  test.yml
bindings/c/: tree-sitter-requirements.h  tree-sitter-requirements.pc.in
bindings/go/: binding.go  binding_test.go  go.mod
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_requirements/: __init__.py  _core.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterRequirementsTests/: TreeSitterRequirementsTests.swift
src/: grammar.json  node-types.json  parser.c
src/tree_sitter_requirements/: __init__.py  _core.py
src/tree_sitter_requirements/queries/: highlights.scm
test/: test_package.py
test/corpus/: example.txt  issues.txt
test/highlight/: requirements.txt
