[package]
name = "tree-sitter-requirements"
description = "requirements grammar for the tree-sitter parsing library"
version = "0.3.2"
keywords = ["incremental", "parsing", "requirements"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/tree-sitter-grammars/tree-sitter-requirements"
edition = "2021"
license = "MIT"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "src/*",
  "queries/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "~0.20.10"

[build-dependencies]
cc = "^1.0"
